// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UnlockTokensRow > should render with isReady = false 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-3 ml-3 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200"
          >
            <span
              class="whitespace-nowrap font-bold text-theme-secondary-900 dark:text-theme-secondary-200"
              data-testid="Amount"
            >
              10 LSK
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-black group-hover:bg-theme-secondary-200"
          >
            <time
              class="text-theme-secondary-700"
              datetime="Wed, 01 Jan 2020 00:00:00 GMT"
            >
              01 Jan 2020 at 00:00:00 (6 months ago)
            </time>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-3 mr-3 rounded-r dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end"
          >
            <div
              class="flex items-center"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="text-theme-secondary-700"
                  data-testid="UnlockableBalanceRow__status"
                >
                  Locked
                </span>
                <div
                  class="ml-2 mr-3 text-theme-secondary-700"
                >
                  <div
                    style="height: 20px; width: 20px;"
                  >
                    <svg
                      id="lock"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M3.4 9.3c0-.7.5-1.2 1.2-1.2h10.9c.7 0 1.2.5 1.2 1.2v8.5c0 .7-.5 1.2-1.2 1.2h-11c-.7 0-1.2-.6-1.2-1.2l.1-8.5h0zM5.8 8.1V5c.1-2.3 2.1-4.2 4.5-4 2.2.1 3.9 1.9 4 4v3M10 12.9h0"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
              <input
                class="custom-checkbox !h-5 !w-5 cursor-pointer !rounded !border-2 transition duration-150 ease-in-out focus:!ring-theme-primary-400 focus:!ring-offset-0 disabled:cursor-not-allowed disabled:border-theme-secondary-300 disabled:bg-theme-secondary-200 disabled:dark:border-theme-secondary-600 disabled:dark:bg-theme-secondary-800 [&:not(:checked)]:border-theme-secondary-300 [&:not(:checked)]:!bg-transparent [&:not(:checked)]:dark:border-theme-secondary-600 checked:text-theme-primary-600 checked:hover:text-theme-primary-700 [&:not(:checked)]:hover:border-theme-primary-600"
                disabled=""
                type="checkbox"
              />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`UnlockTokensRow > should render with isReady = true 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-3 ml-3 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200"
          >
            <span
              class="whitespace-nowrap font-bold text-theme-secondary-900 dark:text-theme-secondary-200"
              data-testid="Amount"
            >
              10 LSK
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-black group-hover:bg-theme-secondary-200"
          >
            <time
              class="text-theme-secondary-700"
              datetime="Wed, 01 Jan 2020 00:00:00 GMT"
            >
              01 Jan 2020 at 00:00:00 (6 months ago)
            </time>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-3 mr-3 rounded-r dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end"
          >
            <div
              class="flex items-center"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="text-theme-secondary-700"
                  data-testid="UnlockableBalanceRow__status"
                >
                  Unlockable
                </span>
                <div
                  class="ml-2 mr-3 text-theme-primary-600"
                >
                  <div
                    style="height: 20px; width: 20px;"
                  >
                    <svg
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M6.4 9.3c0-.7.5-1.2 1.1-1.2h10.3c.7 0 1.1.5 1.1 1.2v8.2c0 .7-.5 1.2-1.1 1.2H7.4c-.7 0-1.1-.6-1.1-1.2l.1-8.2z"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        d="M13.1 11.8c.3 0 .5.2.5.5s-.2.5-.5.5-.5-.2-.5-.5c0-.2.2-.5.5-.5M1 8.2v-3c.1-2.2 2-4 4.3-3.8C7.3 1.5 9 3.2 9 5.2v2.9"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                checked=""
                class="custom-checkbox !h-5 !w-5 cursor-pointer !rounded !border-2 transition duration-150 ease-in-out focus:!ring-theme-primary-400 focus:!ring-offset-0 disabled:cursor-not-allowed disabled:border-theme-secondary-300 disabled:bg-theme-secondary-200 disabled:dark:border-theme-secondary-600 disabled:dark:bg-theme-secondary-800 [&:not(:checked)]:border-theme-secondary-300 [&:not(:checked)]:!bg-transparent [&:not(:checked)]:dark:border-theme-secondary-600 checked:text-theme-primary-600 checked:hover:text-theme-primary-700 [&:not(:checked)]:hover:border-theme-primary-600"
                type="checkbox"
              />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
